# tenzir

./: .cirrus.yml  .clang-format  .clang-tidy  .clangd  .cmake-format  .codecov.yml  .dockerignore  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .iwyu_mappings.imp  .lgtm.yml  .markdownlint.json  .markdownlint.yaml  .markdownlintrc  .travis.boost  .travis.clang  .travis.gcc  .travis.libcppa  .travis.prepare  .travis.yml  .worktreeinclude  .yamllint.yaml  404.html  AGENTS.md  BANNER  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile.extra  Dockerfile_prebuilt  HACKING  (+124 more)
.code-intelligence/: CMakeLists.txt  build.sh  ci_info  extract_flags.sh  project.yaml
.code-intelligence/campaigns/: parse_query-20e3604d.json  parsers_30m.json
.code-intelligence/fuzz_targets/: cli_parser.cpp  cli_parser.cpp.json  cli_parser.cpp.yaml  cli_parser.cpp.yaml.in  query_parser.cpp  query_parser.cpp.json  query_parser.cpp.yaml  query_parser.cpp.yaml.in
aux/: CMakeLists.txt  README.md
aux/boost/: INSTALL  project-root.jam
aux/broker/: CMakeLists.txt
aux/crc/: LICENSE  crc32.c  crc32.h
aux/juice/: mpl.hpp  variant.hpp
aux/lz4/: CMakeLists.txt
aux/murmur/: murmur3.c  murmur3.h
aux/robin-map/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  Makefile  vast.1  vast.1.md  vastd.1  vastd.1.md
doc/api/: README.md  api.raml
doc/cli/: vast-count.md  vast-dump-concepts.md  vast-dump.md  vast-explore.md  vast-export-arrow.md  vast-export-ascii.md  vast-export-csv.md  vast-export-json.md  vast-export-null.md  vast-export-pcap.md  vast-export-zeek.md  vast-export.md  vast-get.md  vast-import-bgpdump.md  vast-import-csv.md  vast-import-json.md  vast-import-mrt.md  vast-import-pcap.md  vast-import-suricata.md  vast-import-syslog.md  vast-import-test.md  vast-import-zeek.md  vast-import.md  vast-infer.md  vast-pivot.md  vast-spawn-source-csv.md  vast-spawn-source-pcap.md  vast-spawn-source-suricata.md  vast-spawn-source-syslog.md  vast-spawn-source-test.md  vast-spawn-source.md  vast-start.md  vast-status.md  vast-stop.md  vast-version.md  vast.md
libtenzir/: CMakeLists.txt
libtenzir/aux/: README.md
libtenzir/builtins/: tql2_test.cpp
libtenzir/fbs/: aggregation.fbs  bitmap.fbs  bloom_filter.fbs  coder.fbs  data.fbs  geoip.fbs  index.fbs  interval.fbs  partition.fbs  partition_synopsis.fbs  partition_transform.fbs  segment.fbs  segmented_file.fbs  synopsis.fbs  table_slice.fbs  type.fbs  type_registry.fbs  uuid.fbs  value_index.fbs
libtenzir/src/: accountant.cpp  accountant_config.cpp  active_partition.cpp  adaptive_builder.cpp  adaptive_table_slice_builder.cpp  aggregation_function.cpp  allocator.cpp  amazon.cpp  application.cpp  argument_parser.cpp  argument_parser2.cpp  arrow_fs.cpp  arrow_memory_pool.cpp  arrow_table_slice.cpp  arrow_time_utils.cpp  arrow_utils.cpp  async.cpp  async_secret_resolution.cpp  async_tls.cpp  aws_credentials.cpp  aws_iam.cpp  azure_auth.cpp  base.cpp  bitmap.cpp  bloom_filter_parameters.cpp  bloom_filter_synopsis.cpp  bool_synopsis.cpp  cast.cpp  catalog.cpp  catalog_lookup.cpp  chunk.cpp  command.cpp  compile.cpp  compile_ctx.cpp  component_registry.cpp  config.cpp.in  config_options.cpp  configuration.cpp  connect_to_node.cpp  connector.cpp  (+180 more)
libtenzir/test/: CMakeLists.txt  active_partition.cpp  adaptive_builder.cpp  adaptive_table_slice_builder.cpp  amazon.cpp  any.cpp  arc.cpp  arrow_extension_types.cpp  arrow_table_slice.cpp  as_bytes.cpp  binner.cpp  bitmap.cpp  bitmap_algorithms.cpp  bitmap_index.cpp  bits.cpp  bitvector.cpp  bloom_filter.cpp  bloom_filter_synopsis.cpp  cache.cpp  cast.cpp  catalog.cpp  catalog_lazy_lookup.cpp  checked_math.cpp  chunk.cpp  co_match.cpp  coder.cpp  command.cpp  community_id.cpp  concepts.cpp  config_options.cpp  configuration.cpp  convertible.cpp  counter.cpp  cryptopan.cpp  curl.cpp  data.cpp  data_builder.cpp  datagram_source.cpp  dcso_bloom_filter.cpp  diagnostics.cpp  (+101 more)
libtenzir_test/: CMakeLists.txt
libtenzir_test/src/: actor_system.cpp  events.cpp  main.cpp  node.cpp  symbols.cpp  table_slices.cpp
libtenzir_tui/: CMakeLists.txt
libtenzir_tui/src/: components.cpp  elements.cpp  theme.cpp
libvast/: CMakeLists.txt
libvast/aux/: README.md
libvast/fbs/: coder.fbs  data.fbs  index.fbs  interval.fbs  partition.fbs  partition_sketch.fbs  partition_synopsis.fbs  partition_transform.fbs  segment.fbs  segmented_file.fbs  sketch.fbs  synopsis.fbs  table_slice.fbs  type.fbs  value_index.fbs
libvast/flatbuffers/: attribute.fbs  batch.fbs  data-table.fbs  data-union.fbs  data.fbs  data_table.fbs  data_union.fbs  event.fbs  segment.fbs  type.fbs
libvast/fuzz/: CMakeLists.txt  fuzz_export.cpp
libvast/libvast_test/: CMakeLists.txt
libvast/native-plugins/: any.cpp  compute.cpp  count.cpp  distinct.cpp  drop.cpp  extend.cpp  feather.cpp  flush.cpp  hash.cpp  identity.cpp  max.cpp  min.cpp  put.cpp  rebuild.cpp  rebuild_old.cpp  rename.cpp  replace.cpp  segment_store.cpp  select.cpp  sum.cpp  summarize.cpp  trim.cpp  where.cpp
libvast/src/: accountant.cpp  accountant_config.cpp  active_partition.cpp  adaptive_table_slice_builder.cpp  address.cpp  (+196 more)
libvast_test/: CMakeLists.txt
python/: .gitignore  Dockerfile  README.md  config.py  config.yaml  config.yaml.example  default.nix  docker-poetry-run.sh  docker-uv-run.sh  fabric.py  logger.py  main.py  pyproject.toml  requirements.txt  setup.cfg  test.py  update-uv-sources.sh  uv-source-info.json  vast-python.spdx  vast.py
pyvast2/: CMakeLists.txt  __init__.py  setup.py
src/: CMakeLists.txt  config.h.in  main.cc  vast.cc  vast.h  vast.in  vastd.cc
tenzir/: CMakeLists.txt  malloc.cpp  operator_new.cpp  tenzir.1.md  tenzir.cpp
vast/: CMakeLists.txt  tenzir.cpp  vast.1.md  vast.cpp
vast_json_benchmark/: CMakeLists.txt  vast_json_benchmark.cpp
vui/: CMakeLists.txt
web/: .Renviron  .gitignore  DESCRIPTION  Makefile  README.md  _quarto.yml  docusaurus.config.js  package.json  pyproject.toml  registerCopyButton.js  sidebars.js  tsconfig.json  versions.json
(+73270 files in other folders)
